Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Adding adapters to get discussable items from capsule documents
Bug fixes:
~~~~~~~~~~
- Comment tool properties were not imported correctly
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Set comment graph synchronous
- Use adapters when manipulating discussable items
- Use Zope3 events